--- a/grade-predictor/src/app/globals.css
+++ b/grade-predictor/src/app/globals.css
@@ -6,6 +6,7 @@
   --text-color: #171717;
   --button-color: var(--foreground);
   --button-text-color: #ffffff;
+  --button-hover-color: #285bb5;
 }
 
 /* Apply theme variables */
@@ -15,11 +16,12 @@ html, body, * {
   font-family: 'SF Pro Display', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
 }
 
+
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
+  /*--font-sans: var(--font-geist-sans);
+  --font-mono: var(--font-geist-mono);*/
 }
 
 @media (prefers-color-scheme: dark) {
@@ -40,7 +42,12 @@ html, body, * {
 
 
 
-
+p {
+  margin: 0;
+  padding: 0;
+  color: var(--text-color);
+  font-weight: bold;
+}
 body {
   background: var(--background);
   color: var(--foreground);
@@ -65,16 +72,17 @@ body {
 }
 
 .button {
-  display: inline-block;
   padding: 10px 20px;
-  font-size: 16px;
-  font-weight: bold;
-  color: var(--foreground);
-  background-color: #ed234d;
+  font-size: 1rem;
+  color: var(--button-text-color);
+  background-color: var(--button-color);
   border: none;
-  border-radius: 5px;
+  border-radius: 16px;
   cursor: pointer;
-  transition: background-color 0.3s ease, color 0.3s ease;
-  position: relative;
-  margin-top: 20px;
+  transition: background-color 0.3s ease;
+  margin-left: 20px;
+}
+
+.button:hover {
+  background-color: var(--button-hover-color);
 }
