--- a/grade-predictor/src/app/quiz.css
+++ b/grade-predictor/src/app/quiz.css
@@ -222,13 +222,23 @@
     color: var(--text-color);
     filter: drop-shadow(0 2px 10px rgba(0,0,0,.35));
 }
-.icon {
-    padding: 10px 10px;
-    background-color: #afc8a72f;
-    border-radius: 5px;
-    margin-left: 1px;
+.featurecard{
+    display: inline-flex; 
+    align-items: center;
+    padding: 10px 30px;
+    background: rgba(255,255,255,0.03);
+    border: 1px solid rgba(255,255,255,0.08);
+    border-radius: 16px;
+    transition: all 0.3s ease;
+    margin-left: 35px;
 }
-
+.icon {
+    font-size: 30px;
+}
+.icon-text {
+    font-weight:600;
+    margin-left: 10px;
+}
 .footer{
     align-self: stretch;
     width: 100%;
