--- a/grade-predictor/src/app/quiz.css
+++ b/grade-predictor/src/app/quiz.css
@@ -16,8 +16,8 @@
     display: inline-flex; 
     align-items: center;
     gap: 8px;
-    background: rgba(99, 241, 189, 0.2);
-    border: 1px solid rgba(99, 241, 109, 0.3);
+    background: rgba(255,255,255,0.03);
+    border: 1px solid rgba(255,255,255,0.08);
 
     color: var(--text-color);
     padding: 8px 16px;
@@ -29,9 +29,10 @@
 }
 
 .bage-dot{
-    width: 10px;
-    height: 10px;
-    background-color: #63F16D;
+    width:6px;
+    height: 6px;
+    background-color: #22d5cf;
+    filter: blur(1px);
     border-radius: 50%;
     animation: pulse 2s infinite;
 }
@@ -231,6 +232,15 @@
     border-radius: 16px;
     transition: all 0.3s ease;
     margin-left: 35px;
+
+    transition: 
+        transform 0.3s cubic-bezier(0.34, 1.56, 0.67, 1),
+        box-shadow 0.3s ease,
+        border-color 0.3s ease;
+}
+.featurecard:hover {
+    transform: translateY(-4px);
+    background: rgba(255, 255, 255, 0.047)
 }
 .icon {
     font-size: 30px;
@@ -260,25 +270,71 @@
   }
   .stats-section {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
+    background: rgba(255,255,255,0.03);
+    border: 1px solid rgba(255,255,255,0.08);
+    padding: 60px 30px;
+    border-radius: 16px;
+    transition: all 0.3s ease;
     margin-top: 50px;
     margin-bottom: 20px;
   }
+.stats-line{
 
+}
+.stats-statement{
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+    font-size: 15px;
+    font-weight: 600;
+    color: #cccccc;
+    margin-bottom: 20px;
+}
+.stats-substatement{
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+    font-size: 12px;
+    font-weight: 400;
+    color: #aaaaaa;
+    max-width:75%;
+    margin-left: 70px;
+}
+.stat-contaier{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    filter: drop-shadow(0 2px 10px rgba(0,0,0,.35));
+}
 .stat{
+    background: rgba(255,255,255,0.03);
+    border: 1px solid rgba(255,255,255,0.08);
+    padding: 10px 30px;
+    border-radius: 16px;
     align-self:auto;
     margin: 0 15px;
     text-align: center;
     font-weight: 900;
     font-size: 45px;
     color:#f9f7f2;
-    filter: drop-shadow(0 2px 10px rgba(0,0,0,.35));
 
     display: flex;
     flex-direction: column;
     align-items: center;
+
+    transition: 
+        transform 0.3s cubic-bezier(0.34, 1.56, 0.67, 1),
+        box-shadow 0.3s ease,
+        border-color 0.3s ease;
+}
+
+.stat:hover{
+    transform: translateY(-4px);
+    background: rgba(255, 255, 255, 0.047)
 }
 .stat-desc{
     text-align: center;
@@ -289,50 +345,3 @@
 
 }
 
-/* Quiz Page Styles */
-.quiz-container {
-    display: flex;
-    box-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.25);
-    background-color: var(--background-color);
-    padding: 32px;
-    text-shadow: 0cm 0cm 0.2cm var(--text-shadow);
-    border-style: solid;
-    box-shadow: 10px 10px 30px rgba(0, 0, 0, 0.1);
-}
-
-.progress {
-    flex-direction: column;
-   align-items: center;
-   justify-content: center;
-}
-.progress-label{
-    margin-left: 10px;
-}
-.progress-count{}
-
-.question {
- display: inline-block;
- position: relative;
- text-align: center;
- white-space: nowrap;
- min-width: 100%;
- margin-bottom: 1rem;
-}
-.no-button {
-    padding: 10px 20px;
-    font-size: 1rem;
-    color: var(--text-color);
-    background-color: var(--background-color);;
-    border-style: solid;
-    border-radius: 16px;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-    margin-left: 20px;
-}
-
-.rest-button{
-
-}
-.home-btn{
-
-}
